Apply same changes as to Pixy